--- a/assignment0.html
+++ b/assignment0.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head><title>USA Map</title></head>
 <body>
 
-<img src="USA.png" usemap="#usamap"> <!-- usemap: Specifies an image as a client-side image-map-->
-
-<map name="usamap"> <!-- An image-map is an image with clickable areas.-->
+<!-- usemap: Specifies an image as a client-side image-map-->
+<img src="USA.png" usemap="#usamap"> 
+<!-- An image-map is an image with clickable areas.-->
+<map name="usamap"> 
   
     <area shape="poly" coords="1005,622,1005,731,1009,787,1037,788,1034,761,1112,755,1079,615"  alt="Alabama" target="audio" href="audio/AL.mp3" />
     <area shape="poly" coords="116,751,129,800,91,788,96,816,126,822,123,841,81,848,85,883,99,902,133,917,60,951,121,942,154,923,152,948,175,913,207,910,254,915,248,766,174,734" alt="Alaska" target="audio" href="audio/AK.mp3" />
