Added back to home link

--- a/assignment0.html
+++ b/assignment0.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>USA Map</title></head>
 <body>
-
+<p><a href="https://seikyung.github.io">Back to Home</a></p>
 <!-- usemap: Specifies an image as a client-side image-map-->
 <img src="USA.png" usemap="#usamap"> 
 <!-- An image-map is an image with clickable areas.-->
