--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <!-- This is a comment -->
-  <h1> Put your name here (Seikyung Jung) </h1>
+  <h1> Put your name here (Seikyung Jung)... </h1>
   <p><a href="assignment0.html"> Assignment0</a></p>
 </body>
 </html>
