home page modified

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <!-- This is a comment -->
   <h1> Dr. Jung </h1>
   <p>Dr. Jung is a Professor at Bridgewater State University. Here are courses that she taught.</p>
-  <div>
-    <p><i>COMP151</i> CS I (Java I, Python)</p>
-    <p><i>COMP152</i> CS II (Java II, C++)</p>
-    <p><i>COMP250</i> Data Structures </p>
-    <p><i>COMP320</i> Linux Admin</p>
-    <p><i>COMP335/596</i> Web app development</p>
-    <p><i>COMP340</i> Organ. of Prog. Langs.</p>
-    <p><i>COMP345/525</i> Compilers</p>
-    <p><i>COMP405/580</i> Database Systems</p>
-    <p><i>COMP415</i> Emerging Languages - Kotlin </p>
-    <p><i>COMP419/585</i> Web Information Retrieval</p>
-  </div>
+  <ul>
+    <li><i>COMP151</i> CS I (Java I, Python)</li>
+    <li><i>COMP152</i> CS II (Java II, C++)</li>
+    <li><i>COMP250</i> Data Structures </li>
+    <li><i>COMP320</i> Linux Admin</li>
+    <li><i>COMP335/596</i> Web app development</li>
+    <li><i>COMP340</i> Organ. of Prog. Langs.</li>
+    <li><i>COMP345/525</i> Compilers</li>
+    <li><i>COMP405/580</i> Database Systems</li>
+    <li><i>COMP415</i> Emerging Languages - Kotlin </li>
+    <li><i>COMP419/585</i> Web Information Retrieval</li>
+  </ul>
   <p><a href="assignment0.html"> Assignment0 - Image Map</a></p>
 </body>
 </html>
