--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <li><i>COMP415</i> Emerging Languages - Kotlin </li>
     <li><i>COMP419/585</i> Web Information Retrieval</li>
   </ul>
-  <p><a href="assignment0.html"> Assignment0 - Image Map</a></p>
+  <!-- <p><a href="assignment0.html"> Assignment0 - Image Map</a></p> -->
 </body>
 </html>
