--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     <li><i>COMP250</i> Data Structures </li>
     <li><i>COMP320</i> Linux Admin</li>
     <li><i>COMP335/596</i> Web app development</li>
-    <li><i>COMP340</i> Organ. of Prog. Langs.</li>
+    <li><i>COMP340</i> Organization of Programming Languages</li>
     <li><i>COMP345/525</i> Compilers</li>
     <li><i>COMP405/580</i> Database Systems</li>
-    <li><i>COMP415</i> Emerging Languages - Kotlin </li>
+    <li><i>COMP415/596</i> Emerging Languages(Kotlin) Android App development </li>
     <li><i>COMP419/585</i> Web Information Retrieval</li>
   </ul>
-  <!-- <p><a href="assignment0.html"> Assignment0 - Image Map</a></p> -->
 </body>
 </html>
